--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,6 @@
 
   <body>
 
-    {% include nav.html %}
-
     {{ content }}
 
     <div class="blog-footer">
@@ -44,12 +42,7 @@
       </p>
     </div>
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../docs-assets/js/holder.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
   </body>
 </html>
