--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -8,12 +8,12 @@
         </h4>
         <p>
             <small>
-                {{ post.date | date: "%m/%d/%Y" }} &mdash;
+                <span class="glyphicon glyphicon-calendar"></span> {{ post.date | date: "%A, %B %d, %y" }} &mdash;
                 {% for tag in post.tags %}
                 {% unless forloop.last %}
-                <a href="/tags/{{tag}}">{{tag}}</a> |
+                <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a> |
                 {% else %}
-                <a href="/tags/{{tag}}">{{tag}}</a>
+                <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a>
                 {% endunless %}
                 {% endfor %}
             </small>
