--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,24 +5,56 @@ layout: layout
 {% include nav.html %}
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 blog-main">
-      <div class="blog-post">
-        <h1 class="blog-post-title">{{ page.title }}</h1>
-        <p class="blog-post-meta">{{ page.date | date: "%A, %B %d, %y" }}</p>
-        {{ content }}
-      </div>
-    </div>
-    <div class="col-md-4 blog-sidebar">
-      <div class="sidebar-module sidebar-module-inset">
-        <h4>About Me</h4>
-        <p>To be edited...</p>
-      </div>
-      <div class="sidebar-module">
-        <h4>Sidebar</h4>
-        <ol class="list-unstyled">
-          <li><a href="#">item </a></li>
-        </ol>
-      </div>
+    <div class="row">
+        <div class="col-md-8 blog-main">
+            <div class="blog-post">
+                <div class="row">
+                    <div class="col-md-8">
+                        <h1 class="blog-post-title">{{ page.title }}</h1>
+                        <p class="blog-post-meta">
+                            <span class="glyphicon glyphicon-calendar"></span> {{ page.date | date: "%A, %B %d, %y" }} &mdash;
+                            {% for tag in page.tags %}
+                            {% unless forloop.last %}
+                            <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a> |
+                            {% else %}
+                            <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a>
+                            {% endunless %}
+                            {% endfor %}
+                        </p>
+                        {% if page.summary %}
+                        <p>{{ page.summary }}</p>
+                        {% endif %}
+                    </div>
+                    <div class="col-md-4 blog-sidebar">
+                        <div class="sidebar-module sidebar-module-inset">
+                            <h4>About Me</h4>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
+                                </div>
+                                <div class="col-md-8">
+                                    <p>Developer-entrepreneur passionate about software development and micro-isv.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="sidebar-module">
+                            <h4>Tags</h4>
+                            <ol class="list-unstyled">
+                                {% for tag in site.tags %}
+                                <li><a href="/tags/{{tag}}">{{tag}}</a></li>
+                                {% endfor %}
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        {{ content }}
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
     </div>
 </div>
