--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,55 +6,73 @@ layout: layout
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8 blog-main">
-            <div class="blog-post">
-                <div class="row">
-                    <div class="col-md-8">
-                        <h1 class="blog-post-title">{{ page.title }}</h1>
-                        <p class="blog-post-meta">
-                            <span class="glyphicon glyphicon-calendar"></span> {{ page.date | date: "%A, %B %d, %y" }} &mdash;
-                            {% for tag in page.tags %}
-                            {% unless forloop.last %}
-                            <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a> |
-                            {% else %}
-                            <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a>
-                            {% endunless %}
-                            {% endfor %}
-                        </p>
-                        {% if page.summary %}
-                        <p>{{ page.summary }}</p>
-                        {% endif %}
-                    </div>
-                    <div class="col-md-4 blog-sidebar">
-                        <div class="sidebar-module sidebar-module-inset">
-                            <h4>About Me</h4>
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <img src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
-                                </div>
-                                <div class="col-md-8">
-                                    <p>Developer-entrepreneur passionate about software development and micro-isv.</p>
-                                </div>
+        <div class="col-md-12 blog-main">
+            <div class="row">
+                <div class="col-md-8">
+                    <h1 class="blog-post-title">{{ page.title }}</h1>
+                    <p class="blog-post-meta">
+                        <span class="glyphicon glyphicon-calendar"></span> {{ page.date | date: "%A, %B %d, %y" }} &mdash;
+                        {% for tag in page.tags %}
+                        {% unless forloop.last %}
+                        <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a> |
+                        {% else %}
+                        <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a>
+                        {% endunless %}
+                        {% endfor %}
+                    </p>
+                    {% if page.summary %}
+                    <p>{{ page.summary }}</p>
+                    {% endif %}
+                </div>
+                <div class="col-md-4 blog-sidebar">
+                    <div class="sidebar-module sidebar-module-inset">
+                        <h4>About Me</h4>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img class="img-responsive" src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
+                            </div>
+                            <div class="col-md-8">
+                                <p>Developer-entrepreneur passionate about software development and micro-isv.</p>
                             </div>
                         </div>
-                        <div class="sidebar-module">
-                            <h4>Tags</h4>
-                            <ol class="list-unstyled">
-                                {% for tag in site.tags %}
-                                <li><a href="/tags/{{tag}}">{{tag}}</a></li>
-                                {% endfor %}
-                            </ol>
-                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        {{ content }}
+                    <div class="sidebar-module">
+                        <h4>Tags</h4>
+                        <ol class="list-unstyled">
+                            {% for tag in site.tags %}
+                            <li><a href="/tags/{{tag}}">{{tag}}</a></li>
+                            {% endfor %}
+                        </ol>
                     </div>
-
-
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 blog-post">
+            {{ content }}
+        </div>
+    </div>
+    <div class="row">
+        <h2>Comments</h2>
+        {% if page.comment %}
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'dominicstpierre'; // required: replace example with your forum shortname
+
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function () {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
+        {% else %}
+        <p>Comment are not active for this post.</p>
+        {% endif %}
     </div>
 </div>
