--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,22 +27,10 @@ layout: layout
                 <div class="col-md-4 blog-sidebar">
                     <div class="sidebar-module sidebar-module-inset">
                         <h4>About Me</h4>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img class="img-responsive" src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
-                            </div>
-                            <div class="col-md-8">
-                                <p>Developer-entrepreneur passionate about software development and micro-isv.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="sidebar-module">
-                        <h4>Tags</h4>
-                        <ol class="list-unstyled">
-                            {% for tag in site.tags %}
-                            <li><a href="/tags/{{tag}}">{{tag}}</a></li>
-                            {% endfor %}
-                        </ol>
+                        <p>
+                            <img class="img-responsive" src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
+                        </p>
+                        <p>Developer-entrepreneur passionate about software development and micro-isv.</p>
                     </div>
                 </div>
             </div>
@@ -55,7 +43,7 @@ layout: layout
     </div>
     <div class="row">
         <h2>Comments</h2>
-        {% if page.comment %}
+        {% if page.comments %}
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
