add sharing button, add limit on home page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,9 @@ layout: layout
 
 {% include nav.html %}
 
-<div class="container">
+<div class="container blog-main">
     <div class="row">
-        <div class="col-md-12 blog-main">
+        <div class="col-md-12">
             <div class="row">
                 <div class="col-md-8">
                     <h1 class="blog-post-title">{{ page.title }}</h1>
@@ -39,6 +39,23 @@ layout: layout
     <div class="row">
         <div class="col-md-12 blog-post">
             {{ content }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h4>If you find it useful, please share it</h4>
+            <!-- AddToAny BEGIN -->
+            <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                <a class="a2a_dd" href="http://www.addtoany.com/share_save"></a>
+                <a class="a2a_button_google_plus"></a>
+                <a class="a2a_button_twitter"></a>
+                <a class="a2a_button_reddit"></a>
+                <a class="a2a_button_buffer"></a>
+                <a class="a2a_button_facebook"></a>
+                <a class="a2a_button_pinterest"></a>
+            </div>
+            <script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
+            <!-- AddToAny END -->
         </div>
     </div>
     <div class="row">
