tags and categories are working

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <div class="blog-masthead">
     <div class="container">
         <nav class="blog-nav">
-            <a class="blog-nav-item active" href="#">Home</a>
-            <a class="blog-nav-item" href="#">New features</a>
-            <a class="blog-nav-item" href="#">Press</a>
-            <a class="blog-nav-item" href="#">New hires</a>
-            <a class="blog-nav-item" href="#">About</a>
+            <a class="blog-nav-item {% if include.param == 'home' %}active{% endif %}" href="/">home</a>
+            <a class="blog-nav-item {% if include.param == 'about' %}active{% endif %}" href="/about">about me</a>
+            {% for cat in site.categories %}
+            <a class="blog-nav-item {% if include.param == cat | first %}active {% endif %}" href="/category/{{ cat | first }}">{{ cat | first }}</a>
+            {% endfor %}
         </nav>
     </div>
 </div>
