standardize all posts with summary, image, catagory and tags

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -32,10 +32,7 @@
     {{ content }}
 
     <div class="blog-footer">
-      <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
+      <p>&copy; Dominic St-Pierre</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
