--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -53,7 +53,7 @@ h6, .h6 {
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
-  color: #D99B68;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -104,6 +104,7 @@ h6, .h6 {
 .blog-main {
   font-size: 18px;
   line-height: 1.5;
+  padding-top: 20px;
 }
 
 /* Sidebar modules for boxing content */
