--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,6 +35,16 @@ layout: layout
                             <img class="img-responsive" src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
                         </p>
                         <p>Developer-entrepreneur passionate about software development and micro-isv.</p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <!-- Place this tag where you want the widget to render. -->
+                                <div class="g-follow" data-annotation="none" data-height="20" data-href="//plus.google.com/110937687841710480769" data-rel="author"></div>
+                            </div>
+                            <div class="col-md-6">
+                                <a href="https://twitter.com/dominicstpierre" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @dominicstpierre</a>
+                                <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -89,3 +99,12 @@ layout: layout
         {% endif %}
     </div>
 </div>
+
+<!-- Place this tag after the last widget tag. -->
+<script type="text/javascript">
+    (function () {
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+        po.src = 'https://apis.google.com/js/platform.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+    })();
+</script>
