--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,20 +31,19 @@ layout: layout
                 <div class="col-md-4 blog-sidebar">
                     <div class="sidebar-module sidebar-module-inset">
                         <h4>About Me</h4>
-                        <p>
-                            <img class="img-responsive" src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
-                        </p>
-                        <p>Developer-entrepreneur passionate about software development and micro-isv.</p>
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-8">
+                                <img class="img-responsive" src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
+                            </div>
+                            <div class="col-md-4">
                                 <!-- Place this tag where you want the widget to render. -->
                                 <div class="g-follow" data-annotation="none" data-height="20" data-href="//plus.google.com/110937687841710480769" data-rel="author"></div>
-                            </div>
-                            <div class="col-md-6">
+                                <br />
                                 <a href="https://twitter.com/dominicstpierre" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @dominicstpierre</a>
                                 <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
                             </div>
                         </div>
+                        <p>Developer-entrepreneur passionate about software development and micro-isv.</p>
                     </div>
                 </div>
             </div>
@@ -56,8 +55,10 @@ layout: layout
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-4">
             <h4>If you find it useful, please share it</h4>
+        </div>
+        <div class="col-md-8">
             <!-- AddToAny BEGIN -->
             <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
                 <a class="a2a_dd" href="http://www.addtoany.com/share_save"></a>
@@ -70,6 +71,10 @@ layout: layout
             </div>
             <script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
             <!-- AddToAny END -->
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <p>&nbsp;</p>
             <h4>Related posts</h4>
             {% include post_list.html param = site.related_posts %}
@@ -77,7 +82,6 @@ layout: layout
         </div>
     </div>
     <div class="row">
-        <h2>Comments</h2>
         {% if page.comments %}
         <div id="disqus_thread"></div>
         <script type="text/javascript">
