try to fix code highlighting in config file, fix layout and change GA code

--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -18,7 +18,7 @@
                 {% endfor %}
             </small>
         </p>
-        <p>
+        <p class="post-summary">
             {%if post.image %}
             <a href='{{post.url}}'><img src="/images/{{post.image}}" style="max-height: 160px;overflow:hidden" /></a>
             {% else %}
