--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,12 +21,8 @@ layout: layout
                         {% endfor %}
                     </p>
                     {% if page.summary %}
-                    <p>{{ page.summary }}</p>
+                    <p class="well">{{ page.summary }}</p>
                     {% endif %}
-
-                    <p class="well">
-                        {{ page.summary }}
-                    </p>
                 </div>
                 <div class="col-md-4 blog-sidebar">
                     <div class="sidebar-module sidebar-module-inset">
