--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -145,6 +145,11 @@ h6, .h6 {
 .blog-post {
   margin-bottom: 60px;
 }
+    .blog-post img {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
 .blog-post-title {
   margin-bottom: 5px;
   font-size: 40px;
@@ -154,8 +159,12 @@ h6, .h6 {
   color: #999;
 }
 
+.post-title {
+    height: 40px;
+}
+
 .post-summary {
-    padding-bottom: 15px;
+    padding-bottom: 25px;
 }
 
 
