--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -4,9 +4,21 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="{{ page.description }}" />
+    <meta name="description" content="{{ page.summary }}" />
     <meta name="author" content="Dominic St-Pierre" />
+    <meta content='summary' name='twitter:card'>
+    <meta content='@dominicstpierre' name='twitter:site'>
+    {% if page.title %}
+    <meta content='{{ page.title }}' property='og:title'>
+    {% else %}
+    <meta content='Dominic St-Pierre' property='og:title'>
+    {% endif %}
+    
+    
+    <link href='http://www.dominicstpierre.com' rel='index' title='Dominic St-Pierre'>
+    <link href='http://www.dominicstpierre.com/atom.xml' rel='alternate' type='application/atom+xml'>
     <link rel="shortcut icon" href="/assets/img/favicon.ico" />
+    <link href="/sitemap.xml" rel="sitemap" title="Sitemap" type='application/xml'>
 
     <title>
         {% if page.title %}
@@ -16,10 +28,11 @@
         {% endif %}
     </title>
 
-    <link href='/sitemap.xml' rel='sitemap' title='Sitemap' type='application/xml'>
+    
     <!-- Bootstrap core CSS -->
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="/assets/css/blog.css" rel="stylesheet" />
+    <link href="/assets/css/highlight.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
