css tweak, new lcsk post

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -22,7 +22,7 @@
 
     <title>
         {% if page.title %}
-        {{ page.title }}
+        {{ page.title }} | Dominic St-Pierre
         {% else %}
         Dominic St-Pierre
         {% endif %}
