--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,110 +1,59 @@
 ---
-layout: layout
+layout: default
 ---
 
-{% include nav.html %}
+{% assign minutes = content | number_of_words | divided_by: 180 %}
+{% if minutes == 0 %}
+{% assign minutes = 1 %}
+{% endif %}
 
-<div class="container blog-main">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-8">
-                    <h1 class="blog-post-title">{{ page.title }}</h1>
-                    <p class="blog-post-meta">
-                        <span class="glyphicon glyphicon-calendar"></span> {{ page.date | date: "%A, %B %d, %y" }} &mdash;
-                        {% for tag in page.tags %}
-                        {% unless forloop.last %}
-                        <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a> |
-                        {% else %}
-                        <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a>
-                        {% endunless %}
-                        {% endfor %}
-                    </p>
-                    {% if page.summary %}
-                    <p class="well">{{ page.summary }}</p>
-                    {% endif %}
-                </div>
-                <div class="col-md-4 blog-sidebar">
-                    <div class="sidebar-module sidebar-module-inset">
-                        <h4>About Me</h4>
-                        <div class="row">
-                            <div class="col-md-8">
-                                <img class="img-responsive" src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
-                            </div>
-                            <div class="col-md-4">
-                                <!-- Place this tag where you want the widget to render. -->
-                                <div class="g-follow" data-annotation="none" data-height="20" data-href="//plus.google.com/110937687841710480769" data-rel="author"></div>
-                                <br />
-                                <a href="https://twitter.com/dominicstpierre" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @dominicstpierre</a>
-                                <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
-                            </div>
-                        </div>
-                        <p>Developer-entrepreneur passionate about software development and micro-isv.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 blog-post">
-            {{ content }}
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
-            <h4>If you find it useful, please share it</h4>
-        </div>
-        <div class="col-md-8">
-            <!-- AddToAny BEGIN -->
-            <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-                <a class="a2a_dd" href="http://www.addtoany.com/share_save"></a>
-                <a class="a2a_button_google_plus"></a>
-                <a class="a2a_button_twitter"></a>
-                <a class="a2a_button_reddit"></a>
-                <a class="a2a_button_buffer"></a>
-                <a class="a2a_button_facebook"></a>
-                <a class="a2a_button_pinterest"></a>
-            </div>
-            <script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
-            <!-- AddToAny END -->
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <p>&nbsp;</p>
-            <h4>Related posts</h4>
-            {% include post_list.html param = site.related_posts %}
-            <p>&nbsp;</p>
-        </div>
-    </div>
-    <div class="row">
-        {% if page.comments %}
-        <div id="disqus_thread"></div>
-        <script type="text/javascript">
-            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'dominicstpierre'; // required: replace example with your forum shortname
-
-            /* * * DON'T EDIT BELOW THIS LINE * * */
-            (function () {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-
-        {% else %}
-        <p>Comments are not active for this post.</p>
-        {% endif %}
-    </div>
+<div class="post-header mb2">
+  <h1>{{ page.title }}</h1>
+  <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}</span><br>
+  {% if page.update_date %}
+    <span class="post-meta">Updated: {{ page.update_date | date: "%b %-d, %Y" }}</span><br>
+  {% endif %}  
+  <span class="post-meta small">
+  {% if page.minutes %}
+    {{ page.minutes }} minute read
+  {% else %}
+    {{ minutes }} minute read
+  {% endif %}
+  </span>
 </div>
 
-<!-- Place this tag after the last widget tag. -->
-<script type="text/javascript">
-    (function () {
-        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-        po.src = 'https://apis.google.com/js/platform.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+<article class="post-content">
+  {{ content }}
+</article>
+
+{% if site.show_post_footers %}
+  {% include post_footer.html %}
+{% endif %}
+
+{% if site.disqus_shortname %}
+  <div id="disqus_thread"></div>
+  <script type="text/javascript">
+    var disqus_shortname  = '{{ site.disqus_shortname }}';
+    var disqus_identifier = '{{ page.id }}';
+    var disqus_title      = '{{ post.title }}';
+
+    (function() {
+      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+      dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
-</script>
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+{% endif %}
+
+{% if site.show_related_posts %}
+  <h3 class="related-post-title">Related Posts</h3>
+  {% for post in site.related_posts %}
+    <div class="post ml2">
+      <a href="{{ post.url | prepend: site.baseurl }}" class="post-link">
+        <h4 class="post-title">{{ post.title }}</h4>
+        <p class="post-summary">{{ post.summary }}</p>
+      </a>
+    </div>
+  {% endfor %}
+{% endif %}
