--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,10 +1,11 @@
 <div class="py2 post-footer">
-  <img src="/images/me.jpeg" alt="John Otander" class="avatar" />
+  <img src="/assets/img/me.png" alt="Dominic St-Pierre" class="avatar" />
   <p>
-    Pixyll is an open-source Jekyll theme that's built by <a href="http://johnotander.com">John Otander</a>.
-    When he's not writing code and building things, he likes to ski. A. Lot.
+    I'm not going to speak of me at the 3rd person. I'm a software developer passionate about
+    creating web apps and self-funded one person SaaS. I'm the CTO at <a href="http://leadfuze.com">LeadFuze</a>
+    and I create technical screencasts in French at <a href="https://focuscentric.com">Focus Centric</a>.
   </p>
   <p>
-    Follow him on <a href="https://twitter.com/4lpine">Twitter</a>.
+    Follow me <a href="https://twitter.com/dominicstpierre">@dominicstpierre</a>.
   </p>
 </div>
