fix categories and tags

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,2 +1,6 @@
-<a href="{{ site.baseurl }}/about/">About</a>
-<a href="{{ site.baseurl }}/contact/">Contact</a>
+<a href="{{ site.baseurl }}/categories/bootstrapping/">bootstrapping</a>
+<a href="{{ site.baseurl }}/categories/tips/">tips</a>
+<a href="{{ site.baseurl }}/categories/web/">web</a>
+<a href="{{ site.baseurl }}/categories/open-source/">open source</a>
+<a href="{{ site.baseurl }}/about/">about</a>
+<a href="{{ site.baseurl }}/contact/">contact</a>
