forgot two files

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,10 +11,16 @@ layout: default
   <h1>{{ page.title }}</h1>
   <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}</span><br>
   {% if page.update_date %}
-    <span class="post-meta">Updated: {{ page.update_date | date: "%b %-d, %Y" }}</span><br>
+    <span class="post-meta">
+      Updated: {{ page.update_date | date: "%b %-d, %Y" }}
+      {% for tag in post.tags %}
+      | <a href="/tags/{{tag}}">{{tag}}</a>
+      {% endfor }
+    </span>
+    <br>
   {% endif %}
   <span class="post-meta small">
-  {% if page.minutes %}
+  {% if page.minutes <= 1 %}
     {{ page.minutes }} minute read
   {% else %}
     {{ minutes }} minute read
