--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,10 @@
 <header class="site-header px2 px-responsive">
   <div class="mt2 wrap">
     <div class="measure">
-      <a href="{{ site.url }}" class="site-title">{{ site.title }}</a>
+      <a href="{{ site.url }}" class="site-title">
+        <img src="/assets/img/me.png" alt="Dominic St-Pierre" class="me" />
+        {{ site.title }}
+      </a>
       <nav class="site-nav right">
         {% include navigation.html %}
       </nav>
