fix unclosed jekyll loop

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
       Updated: {{ page.update_date | date: "%b %-d, %Y" }}
       {% for tag in post.tags %}
       | <a href="/tags/{{tag}}">{{tag}}</a>
-      {% endfor }
+      {% endfor %}
     </span>
     <br>
   {% endif %}
