change related post, added about.html

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
     <div class="container">
         <nav class="blog-nav">
             <a class="blog-nav-item {% if include.param == 'home' %}active{% endif %}" href="/">home</a>
-            <a class="blog-nav-item {% if include.param == 'about' %}active{% endif %}" href="/about">about me</a>
+            <a class="blog-nav-item {% if include.param == 'about' %}active{% endif %}" href="/about.html">about me</a>
             {% for cat in site.categories %}
             <a class="blog-nav-item {% if include.param == cat | first %}active {% endif %}" href="/categories/{{ cat | first }}">{{ cat | first }}</a>
             {% endfor %}
