--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,7 +73,7 @@ layout: layout
         <div class="col-md-12">
             <p>&nbsp;</p>
             <h4>Related posts</h4>
-            {% include post_list.html param = site.related_posts %}
+            {% include related.html param = site.related_posts %}
             <p>&nbsp;</p>
         </div>
     </div>
