--- a/_includes/related.html
+++ b/_includes/related.html
@@ -1,26 +1,11 @@
-<div class='row'>
+<div class="row">
+  <div class="col-sm-12">
     {% for post in include.param %}
-    <div class="col-sm-4">
-        <h4 class="post-title">
+        <h5 class="post-title">
             <a href="{{ post.url }}">
                 {{ post.title }}
             </a>
-        </h4>
-        <p>
-            <small>
-                <span class="glyphicon glyphicon-calendar"></span> {{ post.date | date: "%m/%d/%Y" }} &mdash;
-                {% for tag in post.tags %}
-                {% unless forloop.last %}
-                <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a> |
-                {% else %}
-                <span class="glyphicon glyphicon-tag"></span> <a href="/tags/{{tag}}">{{tag}}</a>
-                {% endunless %}
-                {% endfor %}
-            </small>
-        </p>
-        <p class="post-summary">
-            {{post.summary}}
-        </p>
-    </div>
+        </h5>
     {% endfor %}
+  </div>
 </div>
