--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -19,6 +19,10 @@ h6, .h6 {
   margin-top: 0;
 }
 
+a {
+  color: #740303;
+}
+
 
 /*
  * Override Bootstrap's default container.
@@ -183,4 +187,3 @@ h6, .h6 {
   background-color: #f9f9f9;
   border-top: 1px solid #e5e5e5;
 }
-
