--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -1,8 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="{{ page.summary }}" />
     <meta name="author" content="Dominic St-Pierre" />
@@ -13,12 +16,12 @@
     {% else %}
     <meta content='Dominic St-Pierre' property='og:title'>
     {% endif %}
-    
-    
-    <link href='http://www.dominicstpierre.com' rel='index' title='Dominic St-Pierre'>
-    <link href='http://www.dominicstpierre.com/atom.xml' rel='alternate' type='application/atom+xml'>
+
+
+    <link href="https://dominicstpierre.com" rel="index" title="Dominic St-Pierre" />
+    <link href="https://dominicstpierre.com/atom.xml" rel="alternate" type="application/atom+xml" />
     <link rel="shortcut icon" href="/assets/img/favicon.ico" />
-    <link href="/sitemap.xml" rel="sitemap" title="Sitemap" type='application/xml'>
+    <link href="/sitemap.xml" rel="sitemap" title="Sitemap" type="application/xml" />
 
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/apple-touch-icon-57x57.png">
@@ -38,9 +41,9 @@
 
     <title>
         {% if page.title %}
-        {{ page.title }} | Dominic St-Pierre
+        {{ page.title }}
         {% else %}
-        Dominic St-Pierre
+        Dominic St-Pierre | Engineer | Author | Entrepreneur
         {% endif %}
     </title>
 
@@ -53,36 +56,79 @@
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title }}">
 
-    
-    <!-- Bootstrap core CSS -->
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/assets/css/blog.css" rel="stylesheet" />
-    <link href="/assets/css/highlight.css" rel="stylesheet" />
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/default.min.css" />
+
+    <link href="/assets/css/reset.css" rel="stylesheet" />
+    <link href="/assets/css/pygments.css" rel="stylesheet" />
+    <link href="/assets/css/main.css" rel="stylesheet" />
+
+
 </head>
 
 <body>
 
     {{ content }}
 
-    <div class="blog-footer">
-        <p>&copy; Dominic St-Pierre</p>
-    </div>
+    <section class="header">
+        <div class="container">
+            <div class="content">
+                <a href="/">
+                    <img class="avatar" src="/assets/img/me.jpg" />
+                </a>
 
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
+                <a href="/">
+                    <div class="name">Dominic St-Pierre</div>
+                </a>
+
+                <nav>
+                    <ul>
+                       <li class="nav-blog"><a href="/blog/"><span>Blog</span></a></li>
+                       <li class="nav-about"><a href="/about/"><span>About</span></a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </section>
+
+    <section class="icons">
+        <div class="container">
+            <div class="content">
+                <a href="//github.com/dstpierre" target="_blank" rel="noopener"><img class="icon" src="assets/img/github.svg"
+                        alt="github" /></a>
+
+
+
+                <a href="//twitter.com/dominicstpierre" target="_blank" rel="noopener"><img class="icon" src="/assets/img/twitter.svg"
+                        alt="twitter" /></a>
+
+                        <a href="mailto:dominicstpierre@gmail.com"><img class="icon" src="/assets/img/email.svg" alt="email" /></a>
+
+
+
+                <a href="/index.xml"><img class="icon" src="/assets/img/rss.svg" alt="rss" /></a>
+
+
+
+            </div>
+        </div>
+    </section>
+
+    
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
+
+
+    <script type="text/javascript">
+    //hljs.initHighlightingOnLoad();
+    </script>
 
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-3132262-29', 'dominicstpierre.com');
@@ -90,4 +136,5 @@
 
     </script>
 </body>
+
 </html>
