--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -135,6 +135,20 @@
         ga('send', 'pageview');
 
     </script>
+    <script>
+        window.productHuntUpcoming = {
+          appId: 12818,
+          position: 'bottomLeft',
+        };
+      
+        (function(doc, scr, src, a, b) {
+          a = doc.createElement(scr);
+          b = doc.getElementsByTagName(scr)[0];
+          a.async = true;
+          a.src = src;
+          b.parentNode.insertBefore(a, b);
+        })(document, 'script', 'https://assets.producthunt.com/assets/upwigloader.js');
+      </script>
 </body>
 
 </html>
