fixed an old url, added projects page and fixed layout of about and 404

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: layout
                         <div class="date" title="{{ page.date }}">{{ page.date | date_to_string }}</div>
                         
                         
-                <div class="reading-time"><div class="middot"></div>6 minutes read</div>
+                <div class="reading-time"><div class="middot"></div></div>
                         
                     </div>
                 </div>
