--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -82,7 +82,8 @@
                 <nav>
                     <ul>
                        <li class="nav-blog"><a href="/blog/"><span>Blog</span></a></li>
-                       <li class="nav-about"><a href="/about/"><span>About</span></a></li>
+                       <li class="nav-projects"><a href="/projects.html"><span>Projects</span></a></li>
+                       <li class="nav-about"><a href="/about.html"><span>About</span></a></li>
                     </ul>
                 </nav>
             </div>
