added new post and in-blog push-content

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -93,7 +93,7 @@
     <section class="icons">
         <div class="container">
             <div class="content">
-                <a href="//github.com/dstpierre" target="_blank" rel="noopener"><img class="icon" src="assets/img/github.svg"
+                <a href="//github.com/dstpierre" target="_blank" rel="noopener"><img class="icon" src="/assets/img/github.svg"
                         alt="github" /></a>
 
 
