applied changes to cto copy

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 	<nav class="flex items-center justify-between flex-wrap p-6">
 		<div class="flex items-center flex-shrink-0 text-gray-800 mr-6">
 			<a href="/" title="Dominic St-Pierre home">
-				<img class="fill-current mr-2 h-16 rounded-full" src="/assets/img/me.jpg" />
+				<img class="fill-current mr-2 h-16" src="/assets/img/me.jpg" />
 			</a>
 
 		</div>
