--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -684,6 +684,24 @@ div.content p {
   padding-bottom: 1rem;
 }
 
+div.content ul {
+  list-style-type: disc;
+  padding-left: 2rem;
+}
+
+div.content ol {
+  list-style-type: decimal;
+  padding-left: 2rem;
+}
+
+div.content li {
+  padding-bottom: 0.5rem;
+}
+
+div.content pre {
+  overflow-x: scroll;
+}
+
 .stylistic-quote-mark {
   font-size: 5rem;
   right: 100%;
