added fathom back

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -63,7 +63,9 @@
 	<link href="/assets/css/tailwind.css" rel="stylesheet" />
 	<link href="/assets/css/pygments.css" rel="stylesheet" />
 
-
+	<!-- Fathom - beautiful, simple website analytics -->
+<script src="https://cdn.usefathom.com/script.js" site="XKGYUAEB" defer></script>
+<!-- / Fathom -->
 </head>
 
 <body>
