--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -83,6 +83,9 @@
 		}
 	</style>
 
+	<!-- Fathom - beautiful, simple website analytics -->
+<script src="https://cdn.usefathom.com/script.js" site="XKGYUAEB" defer></script>
+<!-- / Fathom -->
 </head>
 
 <body>
