--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
 	</title>
 
 	<link href="/assets/css/tailwind.css" />
+
+	<!-- Fathom - beautiful, simple website analytics -->
+<script src="https://cdn.usefathom.com/script.js" site="XKGYUAEB" defer></script>
+<!-- / Fathom -->
 </head>
 
 <body>
