increased font size and removed John Doe

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,12 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi, I'm John Doe. I do stuffs with computer and sometimes write about it here. I'm from Penang, MY and I ship code at <a href="#">Microsoft</a>.</p>
+    <p class="lead">
+      Hi, I'm Dominic St-Pierre. I write about software engineering. I'm a 
+      polyglot programmer, but have a huge preference for Go. I'm the 
+      host of <a href="https://go.transistor.fm">go podcast()</a> and 
+      co-host of <a href="https://saasmarathon.com">The SaaS Marathon</a> 
+      podcasts. I published a book / course in 2018 named 
+      <a href="https://buildsaasappingo.com">Build SaaS apps in Go</a>.
+    </p>
   </div>
 </section>
