--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,13 @@
 <footer class="site-footer">
   <div class="container">
-    <small class="block">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} &middot; &lt;/&gt; Powered by <a href="https://jekyllrb.com/">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace">Thinkspace theme</a></small>
+    <small class="block">
+      &copy; {{ site.time | date: '%Y' }} 
+      Dominic St-Pierre &middot; 
+      &lt;/&gt;
+      Twitter <a href="https://twitter.com/dominicstpierre">@dominicstpierre</a>
+      &lt;/&gt;
+      Gitub <a href="https://github.com/dstpierre">dstpierre</a>
+
+    </small>
   </div>
 </footer>
