--- a/_includes/head.html
+++ b/_includes/head.html
@@ -96,4 +96,6 @@
   {% endif %}
 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl | prepend: site.url }}">
+
+  <script src="https://cdn.usefathom.com/script.js" data-site="XKGYUAEB" defer></script>
 </head>
