move RSS and try to fix nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,10 +18,9 @@
           about me
         </a>
       </li>
-      <li><a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" target="_blank">RSS</a></li>
       <li>
         <a href="https://store.dominicstpierre.com/login">
-          access your content
+          your content
         </a>
       </li>
     </ul>
