--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,8 @@
       Twitter <a href="https://twitter.com/dominicstpierre">@dominicstpierre</a>
       &lt;/&gt;
       Gitub <a href="https://github.com/dstpierre">dstpierre</a>
+      &lt;/&gt;
+      <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" target="_blank">RSS</a>
 
     </small>
   </div>
